# MOTION-Mission-Computing

./: .gitignore  .gitmodules  D435i_cam.yaml  LICENSE  README.md  looptest1.plan  looptest2_detection.plan  requirements.txt
scripts/: build.py  clean.py  mavros.service  setup.sh
src/crack_gazebo/: CMakeLists.txt  package.xml
src/crack_gazebo/media/materials/scripts/: aruco_10_250mm.material  aruco_11_500mm.material  aruco_12_750mm.material  aruco_13_1000mm.material  aruco_9_100mm.material
src/crack_gazebo/models/environment/custom_pine/: color.sdf.erb  model.config  model.sdf  model.sdf.erb
src/crack_gazebo/models/environment/franklin_park/: model.config  model.sdf
src/crack_gazebo/models/environment/stadium_box/: model.config  model.sdf
src/crack_gazebo/models/fiducials/aruco_6x6_4/: model.config  model.sdf
src/crack_gazebo/models/fiducials/aruco_6x6_4_v2/: model.config  model.sdf
src/crack_gazebo/models/fiducials/aruco_array_6x6_0_3/: model.config  model.sdf
src/crack_gazebo/models/fiducials/aruco_array_v2/: model.config  model.sdf
src/crack_gazebo/models/fiducials/aruco_landing_markers/: model.config  model.sdf
src/crack_gazebo/models/robots/bullfrog/: model.config  model.sdf.jinja
src/crack_gazebo/models/robots/bullfrog/meshes/: FL_tire.STL  FL_tire_col.STL  FR_tire.STL  RL_tire.STL  (+5 more)
src/crack_gazebo/models/robots/frog_v2/: model.config  model.sdf  model.sdf.jinja
src/crack_gazebo/models/robots/frog_v2_hitl/: model.config  model.sdf
src/crack_gazebo/models/robots/frog_v3/: model.config  model.sdf  model.sdf.jinja
src/crack_gazebo/models/robots/swarm_carrier_v2/: README.md  model.config  model.sdf  model.sdf.jinja
src/crack_gazebo/models/robots/swarm_carrier_v6/: README.md  collision.sdf  model.config  model.sdf  model.sdf.jinja
src/crack_gazebo/models/robots/wallace/: model.config  model.sdf.jinja
src/crack_gazebo/worlds/: edgar_mine.world  franklin_park.world  franklin_park_aruco.world  franklin_park_cluttered.world
src/drone_control/: CMakeLists.txt  package.xml  setup.py
src/drone_control/config/: fielded_params.yaml  params.yaml  sitl_params.yaml
src/drone_control/drone_control/: basic_drone.py  sitl.py
src/drone_control/drone_control/example_missions/: camera_test_mission.py  simple_duo_mission.py  simple_mission.py  waypoint_mission.py
src/drone_control/drone_control/fielded_missions/: move_test_mission.py
src/drone_control/launch/: start_basic_sim.launch.py  start_duo_sim.launch.py  start_fielded_drone.launch.py  start_single_sim.launch.py  vision_nav.launch.py
src/drone_control/src/: vision_bridge.cpp
(+85 files in other folders)
